--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,9 @@ nav{
 
 .nav__link--anchor {
     margin: 0 12px;
-    color: black;
+    color: magenta;
     text-decoration: none;
-    font-weight: 700;
+    font-weight: 600px;
 }
 
 .nav__link--anchor-primary {
